--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,19 @@ description: "The NY Haskell Users Group is for all programmers either intereste
 
 markdown: kramdown
 
+gems: [jekyll-paginate]
 exclude: [Gemfile, Gemfile.lock, CNAME, Readme.md]
 
 footer-links:
   github: ny-haskell
 
 # google_analytics:
-
 url: http://ny-haskell.org
+
 
 kramdown:
   input: GFM
   hard_wrap: false
+
+paginate: 4
+paginate_path: "/blog/page:num/"
